<resources>

    <string name="app_name">Cats Generator</string>

    <!-- CatsGenerator Activity -->
    <string name="toolbar_text">Generator kotów</string>

    <string name="content_description_back_arrow">Back arrow</string>
    <string name="content_description_cat_image">Cat</string>

    <string name="hint_tag">Wybierz tag</string>
    <string name="hint_filter">Wybierz filtr</string>
    <string name="hint_opis">Opis</string>
    <string name="hint_color">Kolor</string>

    <string name="checkbox_text">Dodaj tekst</string>

    <string name="slider_min_value">0</string>
    <string name="slider_max_value">60</string>

    <string name="button_text">DAJ MI KOTA</string>
    <string name="button_text_error">Błąd połączenia</string>

    <string name="empty_tag_item_error">Proszę wybrać tag</string>
    <string name="no_internet_connection_error">Brak połączenia z Internetem</string>

    <string-array name="cat_colors">
        <item>black</item>
        <item>white</item>
        <item>gray</item>
        <item>red</item>
        <item>green</item>
        <item>blue</item>
        <item>yellow</item>
        <item>orange</item>
        <item>brown</item>
    </string-array>

    <string-array name="cat_filters">
        <item>blur</item>
        <item>mono</item>
        <item>sepia</item>
        <item>negative</item>
        <item>paint</item>
        <item>pixel</item>
    </string-array>

</resources>