<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/nested_scrollview_margin_bottom"
            android:fillViewport="true"
            android:overScrollMode="never"
            tools:context=".view.CatGeneratorActivity">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_layout_height">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/content_description_back_arrow"
                            android:src="@drawable/ic_light_back_arrow" />

                        <TextView
                            style="@style/ToolbarTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/toolbar_text_layout_height"
                            android:layout_marginStart="@dimen/toolbar_text_margin_start"
                            android:text="@string/toolbar_text" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.Toolbar>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_cat_height"
                    android:layout_marginHorizontal="@dimen/activity_margin_horizontal"
                    app:cardCornerRadius="@dimen/card_view_corner_radius"
                    app:cardElevation="@dimen/card_view_elevation">

                    <ImageView
                        android:id="@+id/ivCatImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/content_description_cat_image"
                        android:scaleType="centerCrop" />

                    <ProgressBar
                        android:id="@+id/pbLoadingImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/gray"
                        android:indeterminateTintMode="src_atop" />

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_layout_height"
                    android:layout_marginHorizontal="@dimen/activity_margin_horizontal"
                    android:layout_marginTop="@dimen/text_input_layout_margin_top"
                    android:layout_marginBottom="@dimen/text_input_layout_margin_bottom">

                    <AutoCompleteTextView
                        android:id="@+id/tvChooseTag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_tag"
                        android:inputType="none"
                        android:textColorHint="@color/teal_200" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_layout_height"
                    android:layout_marginHorizontal="@dimen/activity_margin_horizontal"
                    android:layout_marginTop="@dimen/text_input_layout_margin_top"
                    android:layout_marginBottom="@dimen/text_input_layout_margin_bottom">

                    <AutoCompleteTextView
                        android:id="@+id/tvChooseFilter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_filter"
                        android:inputType="none"
                        android:textColorHint="@color/teal_200" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/checkbox_margin_horizontal"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbAddText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/purple_500" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/checkbox_text_margin_start"
                        android:text="@string/checkbox_text"
                        android:textSize="@dimen/checkbox_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llExtraSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/hidden_layout_margin_top"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_input_layout_height"
                        android:layout_marginHorizontal="@dimen/activity_margin_horizontal"
                        android:hint="@string/hint_opis">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCatDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/activity_margin_horizontal"
                        android:layout_marginTop="@dimen/slider_margin_top"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:text="@string/slider_min_value"
                            android:textSize="@dimen/slider_text_size" />

                        <com.google.android.material.slider.Slider
                            android:id="@+id/sliderTextSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:stepSize="1"
                            android:valueFrom="0"
                            android:valueTo="60"
                            app:tickVisible="false" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|center"
                            android:text="@string/slider_max_value"
                            android:textSize="@dimen/slider_text_size" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_input_layout_height"
                        android:layout_marginHorizontal="@dimen/activity_margin_horizontal"
                        android:layout_marginTop="@dimen/text_input_layout_margin_top"
                        android:layout_marginBottom="@dimen/text_input_layout_margin_bottom">

                        <AutoCompleteTextView
                            android:id="@+id/tvChooseColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_color"
                            android:inputType="none"
                            android:textColorHint="@color/teal_200" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/btnGiveMeCatError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/activity_margin_horizontal"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:background="@drawable/view_bottom_button_error"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvConnectionFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/button_text_margin_start"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="@dimen/button_line_spacing_extra"
                android:text="@string/button_text_error"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnGiveMeCatDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/activity_margin_horizontal"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            android:background="@drawable/view_bottom_button_default">

            <FrameLayout
                android:id="@+id/btnGiveMeCatLoading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/view_bottom_button_loading"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvGiveMeCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:letterSpacing="0.09"
                android:lineSpacingExtra="@dimen/button_text_line_spacing_extra"
                android:text="@string/button_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/pbLoadingButton"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/progress_bar_margin_start"
                android:indeterminate="true"
                android:indeterminateTint="@color/gray"
                android:indeterminateTintMode="src_atop"
                tools:visibility="visible" />

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>